# taskflow-ambuj

./: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  seed.sql
.tmp/external-context/actix-web/: app-data-middleware-routes.md
.tmp/external-context/garde/: derive-validation-actix-integration.md
.tmp/external-context/sea-orm/: setup-postgres-tokio-rustls.md
.tmp/external-context/sea-orm-migration/: migration-structure-and-api.md
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/config/: global_state.rs  mod.rs  settings.rs
api/src/errors/: app_error.rs
api/src/logging/: formatter.rs  types.rs
api/src/middleware/: auth.rs  request_context.rs
api/src/routes/: auth.rs  mod.rs  project.rs  task.rs
api/src/storage/entities/: mod.rs  project.rs  task.rs  user.rs
api/src/storage/queries/: access.rs  mod.rs  project.rs  task.rs  user.rs
api/src/types/: auth.rs  common.rs  enums.rs  mod.rs  project.rs  task.rs
api/src/validation/: custom.rs
api/tests/: auth_tests.rs  project_tests.rs  task_tests.rs
api/tests/common/: mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260414_000001_create_users_table.rs  m20260414_000002_create_projects_table.rs  m20260414_000003_create_tasks_table.rs  m20260414_000004_add_soft_delete_and_update_enums.rs
postman/: taskflow-local.postman_environment.json  taskflow.postman_collection.json
