[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web.workspace = true
sea-orm.workspace = true
redis.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
garde = { workspace = true, features = ["derive", "email"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true
thiserror.workspace = true
futures.workspace = true
hostname = "0.4"
migration = { path = "../migration" }

[dev-dependencies]
actix-rt.workspace = true
actix-http = "3"
reqwest.workspace = true
dotenv.workspace = true
uuid.workspace = true
